@@ -1,6 +1,8 @@
 Version 1.7.10+svn:
  * Language and i18n:
    * Updated translations:
+ * Miscellaneous and bugfixes:
+   * Scrollbar containers now use the button super class
 
 Version 1.7.10-1.8beta3:
  * Campaigns:
